# Kiwano

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Easy2D.sln  Kiwano.sln  LICENSE  README-zh.md  README.md  ResLoader.cpp  ResLoader.h  appveyor.yml  azure-pipelines.yml
src/kiwano/: CMakeLists.txt  config.h  kiwano.h  macros.h
src/kiwano-audio/: AudioData.cpp  AudioData.h  AudioEngine.cpp  AudioEngine.h  AudioModule.cpp  AudioModule.h  CMakeLists.txt  Module.cpp  Module.h  Sound.cpp  Sound.h  SoundPlayer.cpp  SoundPlayer.h  Transcoder.cpp  Transcoder.h  audio-modules.cpp  audio-modules.h  kiwano-audio.h  libraries.cpp  libraries.h
src/kiwano-audio/MediaFoundation/: MFTranscoder.cpp  MFTranscoder.h  Transcoder.cpp  Transcoder.h  mflib.cpp  mflib.h
src/kiwano-audio/Ogg/: OggTranscoder.cpp  OggTranscoder.h
src/kiwano-audio/src/: AudioEngine.cpp  AudioEngine.h  Player.cpp  Player.h  Sound.cpp  Sound.h  SoundPlayer.cpp  SoundPlayer.h  Transcoder.cpp  Transcoder.h  audio-modules.cpp  audio-modules.h  audio.cpp  audio.h
src/kiwano-imgui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiModule.cpp  ImGuiModule.h  Layer.cpp  Layer.h  Module.cpp  Module.h  imgui_impl.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  kiwano-imgui.h
src/kiwano-imgui/imgui_impl/: imgui_impl.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h
src/kiwano-imgui/src/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiModule.cpp  ImGuiModule.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h
src/kiwano-physics/: Body.cpp  Body.h  CMakeLists.txt  Contact.cpp  Contact.h  ContactEdge.cpp  ContactEdge.h  ContactEvent.cpp  ContactEvent.h  ContactListener.cpp  ContactListener.h  Fixture.cpp  Fixture.h  Global.cpp  Global.h  Joint.cpp  Joint.h  PhysicBody.cpp  PhysicBody.h  PhysicWorld.cpp  PhysicWorld.h  Shape.cpp  Shape.h  World.cpp  World.h  helper.h  kiwano-physics.h
src/kiwano/2d/: Action.cpp  Action.h  ActionGroup.cpp  ActionGroup.h  ActionHelper.h  ActionManager.cpp  ActionManager.h  ActionTween.cpp  ActionTween.h  Actor.cpp  Actor.h  Animation.cpp  Animation.h  Button.cpp  Button.h  Canvas.cpp  Canvas.h  Component.cpp  Component.h  DebugActor.cpp  DebugActor.h  DebugNode.cpp  DebugNode.h  Frame.cpp  Frame.h  FrameSequence.cpp  FrameSequence.h  Geometry.cpp  GifImage.cpp  GifImage.h  GifSprite.cpp  GifSprite.h  Layer.cpp  Layer.h  LayerActor.cpp  LayerActor.h  Node.cpp  Node.h  Scene.cpp  Scene.h  (+22 more)
src/kiwano/ability/: Ability.cpp  Ability.h  Button.cpp  Button.h  ComponentManager.cpp  ComponentManager.h  DebugComponent.cpp  DebugComponent.h  MouseSensor.cpp  MouseSensor.h  RenderAbility.cpp  RenderAbility.h  TransformAbility.cpp  TransformAbility.h
src/kiwano/actor/: Actor.cpp  Actor.h  Canvas.cpp  Canvas.h  GifSprite.cpp  GifSprite.h  LayerActor.cpp  LayerActor.h  ShapeActor.cpp  ShapeActor.h  Sprite.cpp  Sprite.h  SpriteFrame.cpp  Stage.cpp  Stage.h  TextActor.cpp  TextActor.h
src/kiwano/base/: AsyncTask.cpp  AsyncTask.h  ComPtr.hpp  Component.cpp  Component.h  Director.cpp  Director.h  Event.cpp  Event.h  Event.hpp  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Input.cpp  Input.h  Library.cpp  Library.h  Logger.cpp  Logger.h  Module.cpp  Module.h  Object.cpp  Object.h  ObjectBase.cpp  ObjectBase.h  ObjectPool.cpp  ObjectPool.h  RefCounter.cpp  RefCounter.hpp  RefObject.cpp  RefObject.h  RefPtr.h  Resource.cpp  Resource.h  SmartPtr.hpp  Stage.cpp  Stage.h  Timer.cpp  Timer.h  (+10 more)
src/kiwano/common/: Json.hpp  Singleton.hpp  any.hpp  basic_json.hpp  closure.hpp  common.h  function.hpp  intrusive_list.hpp  intrusive_ptr.hpp  noncopyable.hpp  singleton.hpp  string.hpp  vector.hpp
src/kiwano/component/: Button.cpp  Button.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  DebugComponent.cpp  DebugComponent.h  MouseSensor.cpp  MouseSensor.h  RenderComponent.cpp  RenderComponent.h
src/kiwano/core/: Allocator.cpp  Allocator.h  Any.h  AsyncTask.cpp  AsyncTask.h  BaseObject.cpp  BaseObject.h  BinaryData.h  BitOperator.h  Cloneable.h  Common.h  Component.cpp  Component.h  Defer.h  Director.cpp  Director.h  Duration.cpp  Duration.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  EventTicker.cpp  EventTicker.h  Exception.cpp  Exception.h  Flag.h  Function.h  IntrusiveList.h  IntrusiveList.hpp  Json.h  Keys.h  Library.cpp  Library.h  Logger.cpp  Logger.h  Module.cpp  Module.h  (+49 more)
src/kiwano/event/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  EventType.h  Events.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
src/kiwano/math/: Constants.h  EaseFunctions.h  Interpolator.h  Math.h  Matrix.hpp  Random.h  Rect.hpp  Scalar.h  Transform.hpp  Vec2.hpp  constants.h  constants.hpp  ease.h  ease.hpp  math.h  rand.h  scalar.h  scalar.hpp
src/kiwano/module/: Director.cpp  Director.h  Input.cpp  Input.h  Module.cpp  Module.h  ModuleContext.cpp  ModuleContext.h  Runner.cpp  Runner.h  Window.cpp  Window.h
src/kiwano/platform/: Application.cpp  Application.h  Director.cpp  Director.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Keys.h  NativeObject.hpp  Runner.cpp  Runner.h  Window.cpp  Window.h  modules.cpp  modules.h
src/kiwano/render/: Bitmap.cpp  Bitmap.h  BitmapCache.cpp  BitmapCache.h  Brush.cpp  Brush.h  Color.cpp  Color.h  Font.cpp  Font.h  Frame.cpp  Frame.h  FrameSequence.cpp  FrameSequence.h  Geometry.cpp  Geometry.h  GeometrySink.cpp  GeometrySink.h  GifImage.cpp  GifImage.h  Layer.cpp  Layer.h  LayerArea.cpp  LayerArea.h  NativeObject.cpp  NativeObject.h  RenderContext.cpp  RenderContext.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  ShapeMaker.cpp  ShapeMaker.h  ShapeSink.cpp  ShapeSink.h  (+13 more)
src/kiwano/renderer/: Brush.cpp  Brush.h  Color.cpp  Color.h  D2DDeviceResources.cpp  D2DDeviceResources.h  D3D10DeviceResources.cpp  D3D10DeviceResources.h  (+38 more)
(+1673 files in other folders)
