include_directories(..)

set(SOURCE_FILES
        2d/action/Action.cpp
        2d/action/Action.h
        2d/action/ActionDelay.cpp
        2d/action/ActionDelay.h
        2d/action/ActionGroup.cpp
        2d/action/ActionGroup.h
        2d/action/ActionHelper.h
        2d/action/ActionManager.cpp
        2d/action/ActionManager.h
        2d/action/ActionTween.cpp
        2d/action/ActionTween.h
        2d/action/ActionWalk.cpp
        2d/action/ActionWalk.h
        2d/action/Animation.cpp
        2d/action/Animation.h
        2d/Actor.cpp
        2d/Actor.h
        2d/Button.cpp
        2d/Button.h
        2d/Canvas.cpp
        2d/Canvas.h
        2d/Component.cpp
        2d/Component.h
        2d/DebugActor.cpp
        2d/DebugActor.h
        2d/GifSprite.cpp
        2d/GifSprite.h
        2d/LayerActor.cpp
        2d/LayerActor.h
        2d/ShapeActor.cpp
        2d/ShapeActor.h
        2d/Sprite.cpp
        2d/Sprite.h
        2d/Stage.cpp
        2d/Stage.h
        2d/TextActor.cpp
        2d/TextActor.h
        2d/Transition.cpp
        2d/Transition.h
        core/event/Event.cpp
        core/event/Event.h
        core/event/EventType.h
        core/event/KeyEvent.cpp
        core/event/KeyEvent.h
        core/event/MouseEvent.cpp
        core/event/MouseEvent.h
        core/event/WindowEvent.cpp
        core/event/WindowEvent.h
        core/Allocator.cpp
        core/Allocator.h
        core/Any.h
        core/Cloneable.h
        core/Common.h
        core/Director.cpp
        core/Director.h
        core/EventDispatcher.cpp
        core/EventDispatcher.h
        core/EventListener.cpp
        core/EventListener.h
        core/Exception.cpp
        core/Exception.h
        core/Function.h
        core/IntrusiveList.h
        core/Json.h
        core/Keys.h
        core/Library.cpp
        core/Library.h
        core/Logger.cpp
        core/Logger.h
        core/Module.cpp
        core/Module.h
        core/ObjectBase.cpp
        core/ObjectBase.h
        core/RefCounter.cpp
        core/RefCounter.h
        core/Resource.cpp
        core/Resource.h
        core/Serializable.h
        core/Singleton.h
        core/SmartPtr.hpp
        core/String.cpp
        core/String.h
        core/Time.cpp
        core/Time.h
        core/Timer.cpp
        core/Timer.h
        core/TimerManager.cpp
        core/TimerManager.h
        core/Xml.h
        math/Constants.h
        math/EaseFunctions.h
        math/Math.h
        math/Matrix.hpp
        math/Random.h
        math/Rect.hpp
        math/Scalar.h
        math/Transform.hpp
        math/Vec2.hpp
        platform/win32/ComPtr.hpp
        platform/win32/libraries.cpp
        platform/win32/libraries.h
        platform/win32/WindowImpl.cpp
        platform/Application.cpp
        platform/Application.h
        platform/FileSystem.cpp
        platform/FileSystem.h
        platform/Input.cpp
        platform/Input.h
        platform/Runner.cpp
        platform/Runner.h
        platform/Window.cpp
        platform/Window.h
        render/DirectX/D2DDeviceResources.cpp
        render/DirectX/D2DDeviceResources.h
        render/DirectX/D3D10DeviceResources.cpp
        render/DirectX/D3D10DeviceResources.h
        render/DirectX/D3D11DeviceResources.cpp
        render/DirectX/D3D11DeviceResources.h
        render/DirectX/D3DDeviceResourcesBase.h
        render/DirectX/FontCollectionLoader.cpp
        render/DirectX/FontCollectionLoader.h
        render/DirectX/helper.h
        render/DirectX/NativePtr.h
        render/DirectX/RenderContextImpl.cpp
        render/DirectX/RenderContextImpl.h
        render/DirectX/RendererImpl.cpp
        render/DirectX/RendererImpl.h
        render/DirectX/TextRenderer.cpp
        render/DirectX/TextRenderer.h
        render/Brush.cpp
        render/Brush.h
        render/Color.cpp
        render/Color.h
        render/Font.cpp
        render/Font.h
        render/Frame.cpp
        render/Frame.h
        render/FrameSequence.cpp
        render/FrameSequence.h
        render/GifImage.cpp
        render/GifImage.h
        render/Layer.cpp
        render/Layer.h
        render/NativeObject.h
        render/RenderContext.cpp
        render/RenderContext.h
        render/Renderer.cpp
        render/Renderer.h
        render/Shape.cpp
        render/Shape.h
        render/ShapeMaker.cpp
        render/ShapeMaker.h
        render/StrokeStyle.cpp
        render/StrokeStyle.h
        render/TextLayout.cpp
        render/TextLayout.h
        render/TextStyle.hpp
        render/Texture.cpp
        render/Texture.h
        render/TextureCache.cpp
        render/TextureCache.h
        utils/LocalStorage.cpp
        utils/LocalStorage.h
        utils/ResourceCache.cpp
        utils/ResourceCache.h
        utils/UserData.cpp
        utils/UserData.h
        config.h
        kiwano.h
        macros.h)

add_library(libkiwano ${SOURCE_FILES})
